# jamjet-a2a

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
jamjet-a2a/: Cargo.toml
jamjet-a2a-types/: Cargo.toml
jamjet-a2a-types/src/: card.rs  error.rs  extensions.rs  jsonrpc.rs  lib.rs  push.rs  requests.rs  security.rs  streaming.rs  task.rs
jamjet-a2a/examples/: client_discover.rs  echo_server.rs
jamjet-a2a/src/: client.rs  coordinator.rs  federation.rs  lib.rs  mcp_bridge.rs  server.rs  store.rs
jamjet-a2a/tests/: client_server_integration.rs
