[workspace]
resolver = "2"
members = ["jamjet-a2a-types", "jamjet-a2a"]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/jamjet-labs/jamjet-a2a"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = { version = "0.1", features = ["sync"] }
proptest = "1"
