[package]
name = "jamjet-a2a-types"
version = "0.1.2"
description = "A2A v1.0 protocol types — pure data, zero I/O"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["a2a", "agent", "protocol", "types"]
categories = ["data-structures", "encoding"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
